# minimalway

./: CMakeLists.txt  f.txt  lib.cpp  lib.h  main.cpp  tests.cpp
